<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue_alpha">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_games"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textview_nogame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkblue_alpha"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/searchgamectivity_anygame"
        android:textSize="@dimen/bigtext"
        android:textStyle="italic"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textview_connectionfailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkblue_alpha"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/searchgamectivity_connectionfailed"
        android:textSize="@dimen/bigtext"
        android:textStyle="italic"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" />

</RelativeLayout>