...
        android:layout_marginBottom="3dp"
        android:background="@color/darkblue_alpha"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/textview_name"
...
