<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue_alpha"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_games"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textview_failuredtolistgame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textSize="@dimen/bigtext"
        android:gravity="center"
        android:text="@string/lastsgamefragment_failuredtolistgames"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingactionbutton_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:elevation="12dp"
        android:src="@drawable/ic_search"
        android:layout_margin="10dp"/>

</RelativeLayout>