<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue_alpha"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.PagerTabStrip
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </android.support.v4.view.ViewPager>


</LinearLayout>